; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/lib/extr_idr.c_ida_simple_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/lib/extr_idr.c_ida_simple_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ida = type { i32 }

@simple_ida_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ida_simple_remove(%struct.ida* %0, i32 %1) #0 {
  %3 = alloca %struct.ida*, align 8
  %4 = alloca i32, align 4
  store %struct.ida* %0, %struct.ida** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp slt i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @BUG_ON(i32 %7)
  %9 = call i32 @spin_lock(i32* @simple_ida_lock)
  %10 = load %struct.ida*, %struct.ida** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ida_remove(%struct.ida* %10, i32 %11)
  %13 = call i32 @spin_unlock(i32* @simple_ida_lock)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @ida_remove(%struct.ida*, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
